# PGLogAnalysis

./: .gitignore  README.md  plan.md  pyproject.toml
src/pglog_agent/: __init__.py  analyzer.py  cli.py  fingerprint.py  llm.py  models.py  parser.py  plan_parser.py  redaction.py  report.py
tests/: test_parser.py
