[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pglog-agent"
version = "0.1.0"
description = "PostgreSQL text log analysis agent for slow queries and auto_explain plans"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PGLogAnalysis" }]
dependencies = []

[project.scripts]
pglog-agent = "pglog_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

